# FlaskFirst

./: Makefile  README.md  pyproject.toml
HTML/: my.html
fproject/: datetimeapp.py  example.py  flask1.py  my.css  server.py
fproject/static/: my.css
fproject/styles/: my.css
fproject/templates/: my.html
fproject/templates/users/: index.html
