[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Sergeeva Larisa <mindzu@mail.ru>"]
readme = "README.md"
packages = [
    {include = "fproject"},
]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
